@@ -293,6 +293,7 @@ Version 1.3-svn:
    * various code cleanups
    * replaced KDE/Gnome desktop support with generic freedesktop standard
    * fixed the AI getting 'stuck' if no village reachable (bug #7215)
+   * if a unit gains enough XP to gain 2 levels this will be done directly
 
 Version 1.2:
  * campaigns:
